test/cases/bitfields/address_of.c
// RUN: %check -e %s

main()
{
	struct { int i : 3; } a;

	&a.i; // CHECK: /error: bitfield in address-of/
}
